# plasma-packagekit

./: .gitignore  CMakeLists.txt
applet/: CMakeLists.txt  Messages.sh  metadata.desktop
applet/contents/code/: role.js
applet/contents/ui/: FilteredTransactionModel.qml  StateSwitcher.qml  TransactionListItem.qml  main.qml
src/: AbstractModel.cpp  AbstractModel.h  CMakeLists.txt  Debug.cpp  Debug.h  Plugin.cpp  Plugin.h  Transaction.cpp  Transaction.h  TransactionModel.cpp  TransactionModel.h  qmldir
